@@ -35,6 +35,11 @@
 				<item>value2</item>
 			</component>
 
+			<component id="calcservice"
+					   service="Castle.Windsor.Tests.Components.ICalcService, Castle.Windsor.Tests"
+					   type="Castle.Windsor.Tests.Components.CalculatorService, Castle.Windsor.Tests">
+				<item>value1</item>
+			</component>
 		</components>
 	</castle>
 
