@@ -213,9 +213,12 @@
     <Compile Include="InitializationException.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Installer\Configuration.cs" />
+    <Compile Include="Installer\ConfigurationInstaller.cs" />
     <Compile Include="Installer\DefaultComponentInstaller.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Installer\PartialConfigurationStore.cs" />
     <Compile Include="Installer\IComponentsInstaller.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -230,6 +233,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Proxy\ProxyGenerationHookAdapter.cs" />
+    <Compile Include="Installer\IWindsorInstaller.cs" />
     <Compile Include="WindsorContainer.cs">
       <SubType>Code</SubType>
     </Compile>
