@@ -1,6 +1,8 @@
 RC 4
 ====
 
+- Added IWindsorInstaller interface to enhance Windsor component installation.
+
 - Added AllTypesOf registration stratgey to simplify custom registration
   scenarios.
 
